--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
     <meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="expires" content="43200" />
     <!-- Estilos CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
     <!-- Fonts -->
@@ -19,26 +20,28 @@
 </head>
 
 <body>
+
+    <header class="black">
+        <!-- Menú navegación stars -->
+        <nav class="container">
+            <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
+            <ul id="menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</i></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Escríbenos</a></li>
+                <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
+            </ul>
+
+
+
+        </nav>
+        <!-- Menú navegación ends -->
+    </header>
+
+
     <main>
-        <header class="black">
-            <!-- Menú navegación stars -->
-            <nav class="container">
-                <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
-                <ul id="menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="servicios.html">Servicios</i></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contacto.html">Escríbenos</a></li>
-                    <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
-                </ul>
-
-
-
-            </nav>
-            <!-- Menú navegación ends -->
-        </header>
-
         <!-- Botón Whastapp starts -->
         <a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
         <!-- Botón Whastapp ends -->
@@ -48,23 +51,23 @@
             <div class="article_cards animate__animated animate__fadeInUp animate__slow">
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=1" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=1" alt="Imagen de artículo número uno">
+                    <h2>Tendencias en E-Commerce 202</h2>
+                    <p>Conoce las trends en tiendas online para este 2022, la última te va asorprender.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número dos">
+                    <h2>Punto Apps Fest</h2>
+                    <p>así vivimos nuetsro primer encuentro sobre tecnología e innovación</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número tres">
+                    <h2>Plataformas no-code y low-code</h2>
+                    <p>La tecnología avanza para cerra brechas, por ello te presentamos estas alternativas para desarrollo de productos digitales</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
@@ -74,23 +77,23 @@
             <div class="article_cards animate__animated animate__fadeInUp animate__slow">
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=1" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=1" alt="Imagen de artículo número cuatro">
+                    <h2>Plataformas de Gestión ágil</h2>
+                    <p>concoe como dar orden a tu productividad con estas plataformas de getsión ágil.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número cinco">
+                    <h2>Webinar: Claves para empatizar con tu cliente</h2>
+                    <p>Aprende los puntos más relevantes para entender cuales son las necesidades, o puntos de dolor de tu segmento de clientes.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="">
-                    <h2>Artículo</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit quos id quidem doloribus dignissimos repellendus voluptas exercitationem dolorem esse!..</p>
+                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número seis">
+                    <h2>Importancia del UX en las organizaciones</h2>
+                    <p>Descubre el por qué de tener un área de UX con alto nivel de madurez en tu organización. </p>
                     <button class="btn-1"> Leer más</button>
                 </div>
 
