--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
 	<meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="expires" content="43200" />
 	<!-- Estilos CSS-->
 	<link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
 	<!-- Fonts -->
@@ -19,26 +20,25 @@
 </head>
 
 <body>
+
+	<header class="black">
+		<!-- Menú navegación stars -->
+		<nav class="container">
+			<a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
+			<ul id="menu">
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="servicios.html">Servicios</i></li>
+				<li><a href="nosotros.html">Nosotros</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contacto.html">Escríbenos</a></li>
+				<li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
+			</ul>
+		</nav>
+		<!-- Menú navegación ends -->
+	</header>
 	<main>
 		<div class="grid-body">
-			<header class="black">
-				<!-- Menú navegación stars -->
-				<nav class="container">
-					<a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
-					<ul id="menu">
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="servicios.html">Servicios</i></li>
-						<li><a href="nosotros.html">Nosotros</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="contacto.html">Escríbenos</a></li>
-						<li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
-					</ul>
 
-
-
-				</nav>
-				<!-- Menú navegación ends -->
-			</header>
 
 			<!-- Botón Whastapp starts -->
 			<a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
@@ -92,7 +92,7 @@
 					<p>En nosotros encontrarás ese resplado de calidad, confianza e innovación, te invitamos a agendar una cita con nosotros.</p>
 				</div>
 				<div>
-					<img src="img/index/02.png" alt="img">
+					<img src="img/index/02.png" alt="Mujer sonriente se ñalando a su lado">
 				</div>
 
 			</section>
@@ -109,19 +109,19 @@
 
 				<div class="services__items">
 					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_01.png" alt="">
+						<img class="services__card-img" src="img/index/services_01.png" alt="Profesionales en desarrollo de software trabajando">
 						<h4 class="service__name">Desarrollo de aplicaciones</h4>
 					</div>
 					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_02.png" alt="">
+						<img class="services__card-img" src="img/index/services_02.png" alt="Profesionales en desarrollo de software trabajando">
 						<h4 class="service__name">Desarrollo de sitios web</h4>
 					</div>
 					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_03.png" alt="">
+						<img class="services__card-img" src="img/index/services_03.png" alt="primer plano de pantalla de desarrollador">
 						<h4 class="service__name">Diseño de marca</h4>
 					</div>
 					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_04.png" alt="">
+						<img class="services__card-img" src="img/index/services_04.png" alt="Mujer desarrolladora trabajando">
 						<h4 class="service__name">Marketing digital</h4>
 					</div>
 				</div>
