3ra Entrega proyecto

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Blog</title>
     <meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
-    <meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
+    <meta name="keywords" content="punto app, noticias tecnología, noticias desarrollo de software, blog tecnología" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="expires" content="43200" />
     <!-- Estilos CSS-->
@@ -49,49 +49,57 @@
         <div class="container">
 
             <div class="article_cards animate__animated animate__fadeInUp animate__slow">
-
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=1" alt="Imagen de artículo número uno">
+                    <img src="img/blog/01.png" alt="Imagen de artículo número uno">
                     <h2>Tendencias en E-Commerce 202</h2>
                     <p>Conoce las trends en tiendas online para este 2022, la última te va asorprender.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
+                <!-- card ends -->
 
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número dos">
+                    <img src="img/blog/02.png" alt="Imagen de artículo número dos">
                     <h2>Punto Apps Fest</h2>
                     <p>así vivimos nuetsro primer encuentro sobre tecnología e innovación</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
+                <!-- card ends -->
 
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número tres">
+                    <img src="img/blog/03.png" alt="Imagen de artículo número tres">
                     <h2>Plataformas no-code y low-code</h2>
                     <p>La tecnología avanza para cerra brechas, por ello te presentamos estas alternativas para desarrollo de productos digitales</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
-
+                <!-- card ends -->
 
             </div>
 
             <div class="article_cards animate__animated animate__fadeInUp animate__slow">
-
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=1" alt="Imagen de artículo número cuatro">
+                    <img src="img/blog/04.png" alt="Imagen de artículo número cuatro">
                     <h2>Plataformas de Gestión ágil</h2>
                     <p>concoe como dar orden a tu productividad con estas plataformas de getsión ágil.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
+                <!-- card ends -->
 
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número cinco">
+                    <img src="img/blog/05.png" alt="Imagen de artículo número cinco">
                     <h2>Webinar: Claves para empatizar con tu cliente</h2>
                     <p>Aprende los puntos más relevantes para entender cuales son las necesidades, o puntos de dolor de tu segmento de clientes.</p>
                     <button class="btn-1"> Leer más</button>
                 </div>
+                <!-- card ends -->
 
+                <!-- card starts -->
                 <div class="article_item">
-                    <img src="https://picsum.photos/300/300?random=10" alt="Imagen de artículo número seis">
+                    <img src="img/blog/06.png" alt="Imagen de artículo número seis">
                     <h2>Importancia del UX en las organizaciones</h2>
                     <p>Descubre el por qué de tener un área de UX con alto nivel de madurez en tu organización. </p>
                     <button class="btn-1"> Leer más</button>
