--- a/servicios.html
+++ b/servicios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Servicios</title>
     <meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
-    <meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
+    <meta name="keywords" content="desarrolo de software, desarrollo de aplicaciones, casa de desarrollo, sitios web, marketing digital" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="expires" content="43200" />
     <!-- Estilos CSS-->
