--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<main>
 		<div class="grid-body">
 			<!-- Botón Whastapp starts -->
-			<a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
+			<a class="float text-decoration-none" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
 			<!-- Botón Whastapp ends -->
 
 			<!-- Banner starts -->
