--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,9 @@
     <meta http-equiv="expires" content="43200" />
     <!-- Estilos CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    <!-- CSS Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <!-- Fontawesome íconos -->
@@ -27,16 +30,36 @@
         <nav class="container">
             <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
             <ul id="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</i></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacto.html">Escríbenos</a></li>
-                <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
+                <li><a class="text-light text-decoration-none" href="index.html">Inicio</a></li>
+                <li><a class="text-light text-decoration-none" href="servicios.html">Servicios</i></li>
+                <li><a class="text-light text-decoration-none" href="nosotros.html">Nosotros</a></li>
+                <li><a class="text-light text-decoration-none" href="blog.html">Blog</a></li>
+                <li><a class="text-light text-decoration-none" href="contacto.html">Escríbenos</a></li>
+                <li><a class="text-light text-decoration-none" href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
             </ul>
 
+            <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+                <i class="fa-solid fa-bars"></i>
+            </button>
 
-
+            <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="staticBackdropLabel">PuntoApps</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <div>
+                        <ul class="list-group">
+                            <li><a class=" text-decoration-none" href="index.html">Inicio</a></li>
+                            <li><a class=" text-decoration-none" href="servicios.html">Servicios</i></li>
+                            <li><a class=" text-decoration-none" href="nosotros.html">Nosotros</a></li>
+                            <li><a class=" text-decoration-none" href="blog.html">Blog</a></li>
+                            <li><a class=" text-decoration-none" href="contacto.html">Escríbenos</a></li>
+                            <li><a class=" text-decoration-none" href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
         <!-- Menú navegación ends -->
     </header>
@@ -355,59 +378,63 @@
 
         </div>
 
-        <!-- Footer starts -->
-        <footer class="black">
-            <div class="container__footer">
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Servicios</h4>
-                        <br>
-                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
-                        <li><a href="servicios.html">Diseño de marca</a></li>
-                        <li><a href="servicios.html">Marketing digital</a></li>
-                    </ul>
-                </div>
+    </main>
 
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Punto apps </h4>
-                        <br>
-                        <li><a href="nosotros.html">Nosotros</a> </li>
-                        <li><a href="contacto.html">Escríbenos</a></li>
-                        <li><a href="coming_soon.html">Soporte</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Legal </h4>
-                        <br>
-                        <li><a href="coming_soon.html">Equipo</a> </li>
-                        <li><a href="coming_soon.html">Planes</a></li>
-                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
-                        <li><a href="coming_soon.html">Política de privacidad</a></li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <div class="container">
-                        <h5>Síguenos en redes sociales</h5>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
-                    </div>
-                    <div class="container">
-                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
-                    </div>
-                </div>
+    <!-- Footer starts -->
+    <footer class="black">
+        <div class="container__footer">
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Servicios</h4>
+                    <br>
+                    <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                    <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                    <li><a href="servicios.html">Diseño de marca</a></li>
+                    <li><a href="servicios.html">Marketing digital</a></li>
+                </ul>
             </div>
 
-        </footer>
-        <!-- Footer ends -->
-    </main>
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Punto apps </h4>
+                    <br>
+                    <li><a href="nosotros.html">Nosotros</a> </li>
+                    <li><a href="contacto.html">Escríbenos</a></li>
+                    <li><a href="coming_soon.html">Soporte</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Legal </h4>
+                    <br>
+                    <li><a href="coming_soon.html">Equipo</a> </li>
+                    <li><a href="coming_soon.html">Planes</a></li>
+                    <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                    <li><a href="coming_soon.html">Política de privacidad</a></li>
+                </ul>
+            </div>
+
+            <div class="social">
+                <div class="container">
+                    <h5>Síguenos en redes sociales</h5>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                </div>
+                <div class="container">
+                    <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer ends -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
